apps/base/lobe-chat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobe-chat
  labels:
    name: lobe-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lobe-chat
  template:
    metadata:
      labels:
        app: lobe-chat
    spec:
      containers:
      - image: lobehub/lobe-chat
        imagePullPolicy: IfNotPresent
        name: lobe-chat
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 3210
      restartPolicy: Always
