apps/base/lobe-chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lobe-chat
  labels:
    app: lobe-chat
spec:
  ports:
  - port: 3210
    targetPort: 3210
  selector:
    app: lobe-chat
