apps/base/lobe-chat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: lobe-chat
  name: lobe-chat
spec:
  ingressClassName: nginx
  rules:
    - host: lobe.example.com
      http:
        paths:
          - backend:
              service:
                name: lobe-chat
                port:
                  number: 3210
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - lobe.example.com
      secretName: lobe-chat-tls
